--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="relative group" data-aos="fade-left" data-aos-duration="1000">
                 <div class="relative z-10 w-full max-w-md mx-auto aspect-[3/4] bg-slate-800 rounded-2xl overflow-hidden shadow-2xl border border-slate-700 group-hover:border-blue-500/50 transition">
-                    <img src="https://via.placeholder.com/600x800/1e293b/94a3b8?text=Your+Photo" alt="Li Linyang" class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition duration-500 hover:scale-105">
+                    <img src="avatar.png" alt="Li Linyang" class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition duration-500 hover:scale-105">
                 </div>
             </div>
         </div>
