--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="container mx-auto px-6 relative z-10 text-center">
             <div data-aos="fade-up" data-aos-duration="1000">
                 <p class="text-blue-500 font-medium mb-6 tracking-[0.2em] uppercase text-sm">
-                    <span lang="cn">Lilinyang 2026 个人作品集</span><span lang="en">Portfolio 2026</span>
+                    <span lang="cn">2026 个人作品集</span><span lang="en">Portfolio 2026</span>
                 </p>
                 
                 <h1 class="text-5xl md:text-8xl font-bold leading-tight mb-8 text-white">
