--- a/index.html
+++ b/index.html
@@ -126,16 +126,11 @@
                     <span lang="en">Master's student at M.U.S.T. Focusing on brand reshaping and AIGC visual exploration. Creating digital experiences with commercial value.</span>
                 </p>
                 
-                <div class="flex flex-col md:flex-row gap-6 justify-center items-center">
-                    <a href="#uiux" class="btn-liquid px-10 py-4 rounded-full text-white font-bold tracking-wide shadow-[0_0_15px_rgba(59,130,246,0.5)]">
-                        <span lang="cn">查看作品</span><span lang="en">View Works</span>
-                    </a>
-                    <a href="mailto:940213696@qq.com" class="btn-liquid px-10 py-4 rounded-full text-slate-300 hover:text-white">
-                        <span lang="cn">联系我</span><span lang="en">Email Me</span>
-                    </a>
-                </div>
-            </div>
-        </div>
+                <div class="flex flex-col md:flex-row justify-center items-center mt-8">
+    <a href="#uiux" class="btn-liquid px-12 py-4 rounded-full text-white font-bold tracking-wide shadow-[0_0_20px_rgba(59,130,246,0.6)] hover:scale-105 transform transition">
+        <span lang="cn">查看作品</span><span lang="en">View Works</span>
+    </a>
+</div>
         
         <div class="absolute bottom-10 left-1/2 -translate-x-1/2 text-slate-500 animate-bounce">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path></svg>
