--- a/index.html
+++ b/index.html
@@ -55,35 +55,60 @@
         body.english-mode [lang="cn"] { display: none; }
         body.english-mode [lang="en"] { display: inline-block; }
 
-        /* --- 6. 极光流光背景动画 (Aurora Gradient) --- */
+        /* --- 6. 极光流光背景动画 (Aurora Gradient - 缓慢深海版) --- */
         .aurora-bg {
             position: absolute; inset: 0; overflow: hidden; z-index: 0;
-            background: #020617;
+            background: #020617; /* 深海基底色 */
         }
         .blob {
             position: absolute; border-radius: 50%;
-            filter: blur(80px); opacity: 0.5;
-            animation: float 10s infinite ease-in-out alternate;
+            filter: blur(100px); /* 增加模糊度，让交融更柔和 */
+            opacity: 0.6; /* 稍微增加一点不透明度，让色彩更实 */
+            /* 混合模式：让颜色叠加时产生更有趣的效果 */
+            mix-blend-mode: screen; 
         }
+
+        /* 🔵 蓝色光斑：负责左上到右下的对角线大幅移动 */
         .blob-1 {
-            top: -10%; left: -10%; width: 50vw; height: 50vw;
-            background: #3b82f6; /* 蓝色 */
-            animation-delay: 0s;
+            top: -20%; left: -20%; width: 60vw; height: 60vw;
+            background: #3b82f6;
+            animation: move-1 35s infinite ease-in-out alternate;
         }
+        /* 🟣 紫色光斑：负责底部的大范围呼吸和横移 */
         .blob-2 {
-            bottom: -10%; right: -10%; width: 60vw; height: 60vw;
-            background: #7c3aed; /* 紫色 */
-            animation-delay: -5s;
+            bottom: -30%; right: -10%; width: 70vw; height: 70vw;
+            background: #7c3aed;
+            animation: move-2 40s infinite ease-in-out alternate-reverse;
         }
+        /* 💖 粉色光斑：负责中心的游走和剧烈的大小变化 */
         .blob-3 {
-            top: 40%; left: 40%; width: 40vw; height: 40vw;
-            background: #be185d; /* 粉红 */
-            opacity: 0.3;
-            animation-duration: 15s;
+            top: 30%; left: 30%; width: 50vw; height: 50vw;
+            background: #be185d;
+            opacity: 0.4;
+            animation: move-3 30s infinite ease-in-out alternate;
         }
-        @keyframes float {
+
+        /* --- 定义三个独立的复杂动画轨迹 --- */
+        
+        /* 轨迹 1 (蓝): 大幅向右下移动并变大 */
+        @keyframes move-1 {
+            0% { transform: translate(0, 0) scale(0.8); }
+            50% { transform: translate(30vw, 20vh) scale(1.5); } /* 移动到屏幕中间偏右，变大1.5倍 */
+            100% { transform: translate(50vw, 50vh) scale(1.2); } /* 移动到右下角 */
+        }
+
+        /* 轨迹 2 (紫): 横向慢移并像呼吸一样巨大化 */
+        @keyframes move-2 {
             0% { transform: translate(0, 0) scale(1); }
-            100% { transform: translate(30px, 50px) scale(1.1); }
+            100% { transform: translate(-40vw, -10vh) scale(1.8); } /* 向左上方巨大化移动 */
+        }
+
+        /* 轨迹 3 (粉): 在中心游走，忽大忽小 */
+        @keyframes move-3 {
+            0% { transform: translate(0, 0) scale(0.5) rotate(0deg); } /* 初始很小 */
+            33% { transform: translate(20vw, -30vh) scale(1.3) rotate(120deg); } /* 跑到右上方变大 */
+            66% { transform: translate(-20vw, 20vh) scale(0.8) rotate(240deg); } /* 跑到左下方变小 */
+            100% { transform: translate(0, 0) scale(0.5) rotate(360deg); } /* 回到原点 */
         }
     </style>
 </head>
