--- a/index.html
+++ b/index.html
@@ -121,26 +121,26 @@
             100% { transform: translate(-30%, -70%) scale(1); }  /* 稍微偏离 */
         }
 
-        /* --- 7. 鼠标交互光斑 (Interactive Blob) --- */
+        /* --- 7. 鼠标交互光斑 --- */
         #interactive-blob {
-            position: absolute;
-            top: 0; left: 0;
-            width: 20vmax; height: 20vmax; /* 大小 */
+            /* ...保留以前的属性... */
+            /* 关键修改：让它的层级在遮罩(z-index:1)的下面(z-index:0) */
+            /* 这样光斑移动到边缘时，会被上面的黑框遮罩盖住，自然变暗 */
+            z-index: 0; 
+            
+            position: absolute; top: 0; left: 0;
+            width: 20vmax; height: 20vmax;
             background: radial-gradient(circle, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0) 60%);
-            mix-blend-mode: overlay; /* 叠加模式：让它像光一样照亮背景 */
+            mix-blend-mode: overlay;
             border-radius: 50%;
-            pointer-events: none; /* 让鼠标能穿透它点击下面的按钮 */
-            z-index: 1; /* 在背景之上，内容之下 */
-            opacity: 0; /* 默认隐藏，动起来才显示 */
+            pointer-events: none;
+            opacity: 0;
             transform: translate(-50%, -50%) scale(1);
-            transition: transform 0.15s ease, opacity 0.5s ease; /* 点击时的缩放过渡 */
+            transition: transform 0.15s ease, opacity 0.5s ease;
         }
-        
-        /* 点击时的律动状态 */
         #interactive-blob.active {
-            transform: translate(-50%, -50%) scale(1.8); /* 点击时瞬间变大 */
-            background: radial-gradient(circle, rgba(200, 230, 255, 0.9) 0%, rgba(255, 255, 255, 0) 70%);
-            mix-blend-mode: plus-lighter; /* 变得更亮 */
+            transform: translate(-50%, -50%) scale(1.8);
+            mix-blend-mode: plus-lighter;
         }
     </style>
 </head>
