--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <h3 class="text-xl font-bold text-white mb-2">澳门人工智能超算中心 MAISC</h3>
                         <p class="text-slate-400 text-sm line-clamp-3 mb-4">为 MAISC 打造的可信数据空间。包含 PC 端与移动端完整设计规范，融合莲花与运算概念。</p>
                         <div class="flex gap-2 overflow-hidden">
-                            <img src="1.png" class="w-10 h-10 object-cover rounded border border-slate-600 opacity-60 group-hover:opacity-100 transition">
+                            <img src="MAISC 网页设计.png" class="w-10 h-10 object-cover rounded border border-slate-600 opacity-60 group-hover:opacity-100 transition">
                             <img src="3.png" class="w-10 h-10 object-cover rounded border border-slate-600 opacity-60 group-hover:opacity-100 transition">
                             <img src="4.png" class="w-10 h-10 object-cover rounded border border-slate-600 opacity-60 group-hover:opacity-100 transition">
                         </div>
