--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <div class="blob blob-1"></div>
             <div class="blob blob-2"></div>
             <div class="blob blob-3"></div>
+            <div id="interactive-blob"></div>
         </div>
 
         <div class="container mx-auto px-6 relative z-10 text-center">
