--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         body.en-mode [lang="cn"] { display: none !important; }
         body.en-mode [lang="en"] { display: block !important; }
         
-        /* 特殊处理：inline 元素的显示方式 */
+        /* 特殊处理：inline 元素的显示方式，防止布局错乱 */
         body.en-mode span[lang="en"] { display: inline !important; }
+        span[lang="cn"] { display: inline; }
 
         /* --- 3. 玻璃拟态 --- */
         .glass-nav { 
@@ -44,7 +45,7 @@
             box-shadow: 0 20px 40px -15px rgba(0, 0, 0, 0.7);
         }
 
-        /* --- 4. 图片占位符 (你要求的留框) --- */
+        /* --- 4. 图片占位符 --- */
         .img-placeholder {
             width: 100%;
             height: 100%;
@@ -152,12 +153,24 @@
                 <h2 class="text-3xl font-bold text-white mb-8"><span lang="cn">精选项目</span><span lang="en">Selected Projects</span></h2>
                 
                 <div class="flex flex-wrap justify-center gap-3" id="filters">
-                    <button class="filter-btn active px-5 py-2 rounded-full text-sm" onclick="filter('all', this)">All</button>
-                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('ui', this)">UI/UX</button>
-                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('brand', this)">Branding</button>
-                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('product', this)">Product</button>
-                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('media', this)">New Media</button>
-                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('ai', this)">AI & IP</button>
+                    <button class="filter-btn active px-5 py-2 rounded-full text-sm" onclick="filter('all', this)">
+                        <span lang="cn">全部</span><span lang="en">All</span>
+                    </button>
+                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('ui', this)">
+                        <span lang="cn">界面设计</span><span lang="en">UI/UX</span>
+                    </button>
+                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('brand', this)">
+                        <span lang="cn">品牌视觉</span><span lang="en">Branding</span>
+                    </button>
+                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('product', this)">
+                        <span lang="cn">产品文创</span><span lang="en">Product</span>
+                    </button>
+                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('media', this)">
+                        <span lang="cn">新媒体运营</span><span lang="en">New Media</span>
+                    </button>
+                    <button class="filter-btn px-5 py-2 rounded-full text-sm" onclick="filter('ai', this)">
+                        <span lang="cn">AI与IP设计</span><span lang="en">AI & IP</span>
+                    </button>
                 </div>
             </div>
 
