--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-white mb-8"><span lang="cn">精选项目</span><span lang="en">Selected Projects</span></h2>
                 
                 <div class="flex flex-wrap justify-center gap-3" id="filter-container">
-                    <!-- 筛选按钮通过 JS 动态生成，这里保留 HTML 结构以便理解 -->
+                    <!-- 筛选按钮 -->
                     <button class="filter-btn active px-5 py-2 rounded-full text-sm" data-filter="all">
                         <span lang="cn">全部</span><span lang="en">All</span>
                     </button>
@@ -295,7 +295,6 @@
     <script>
         // ==========================================
         // 1. 项目数据 (Single Source of Truth)
-        //    在这里修改文字，页面会自动更新
         // ==========================================
         const projectsData = [
             {
@@ -505,10 +504,12 @@
                     if(p.category === 'AI & IP') colorClass = 'text-purple-400 border-purple-400/30';
                     if(p.category === 'New Media') colorClass = 'text-red-400 border-red-400/30';
 
-                    // 🔴 修复：使用函数调用代替内联 JS 字符串拼接，彻底根治 SyntaxError
+                    // 🔴 修复：安全转义英文标题中的单引号，防止破坏 HTML 属性结构
+                    const safeTitle = p.titleEN.replace(/'/g, "\\'");
+
                     card.innerHTML = `
                         <div class="img-container">
-                            <img src="${p.img}" onerror="handleImgError(this, '${p.titleEN}')" alt="${p.titleEN}">
+                            <img src="${p.img}" onerror="handleImgError(this, '${safeTitle}')" alt="${p.titleEN}">
                         </div>
                         <div class="p-6">
                             <div class="mb-3 flex gap-2">
