--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
                 <button onclick="closeModal()" class="text-gray-400 hover:text-white hover:bg-white/10 rounded-full p-2 transition"><i class="ph ph-x text-2xl"></i></button>
             </div>
             <div class="flex-1 overflow-y-auto bg-[#000509] no-scrollbar relative text-center">
-                <img id="modal-img" src="" class="w-full h-auto block mx-auto cursor-zoom-in hover:opacity-95 transition shadow-2xl" 
-                     alt="Project Detail" title="Click to view full size" onclick="window.open(this.src, '_blank');">
+                <img id="modal-img" src="" class="w-full h-auto block mx-auto cursor-zoom-in transition shadow-2xl" 
+                    alt="Project Detail" title="Click to view full size" onclick="window.open(this.src, '_blank');">
                 <div class="py-16"><p class="text-gray-600 text-xs uppercase tracking-[0.2em]"><span lang="cn">展示结束</span><span lang="en">End of Presentation</span></p></div>
             </div>
         </div>
