--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: top; /* ✅ 关键修改：强制让图片从顶部开始显示 */
             transition: transform 0.6s ease;
         }
         .glass-card:hover .img-container img { transform: scale(1.08); }
