--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
             reset() {
                 this.x = Math.random() * width;
                 this.y = Math.random() * height;
-                // 🚀 速度调快：从 0.2 提升到 0.6，方向更随机
-                this.vx = (Math.random() - 0.5) * 0.6; 
-                this.vy = (Math.random() - 0.5) * 0.6;
+                // 🚀 首页渐变-速度调快：从 0.2 提升到 0.9，方向更随机，这里也改成 1.0 (或者 1.2, 1.5 随你喜欢)
+                this.vx = (Math.random() - 0.5) * 0.9; 
+                this.vy = (Math.random() - 0.5) * 0.9;
                 this.baseSize = Math.random() * 300 + 300; // 基础大小
                 this.angle = Math.random() * Math.PI * 2; // 用于呼吸效果的相位
                 
@@ -349,7 +349,7 @@
             update() {
                 this.x += this.vx;
                 this.y += this.vy;
-                this.angle += 0.01; // 呼吸速度
+                this.angle += 0.01; // 呼吸速度，如果你觉得**“呼吸”（忽大忽小）**的速度也太慢了，想让它呼吸得急促一点，可以同时把下面的 0.015 改大一点（比如 0.03）
 
                 // 🌬️ 呼吸感核心：利用正弦波改变大小
                 this.size = this.baseSize + Math.sin(this.angle) * 30; 
