--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
         </div>
     </footer>
 
+    <button id="back-to-top" class="fixed bottom-8 right-8 z-40 bg-white/10 backdrop-blur-md border border-white/20 text-white p-3 rounded-full shadow-lg transition-all duration-500 opacity-0 pointer-events-none translate-y-10 hover:bg-emerald-500 hover:border-emerald-500 group">
+        <i class="ph ph-arrow-up text-xl group-hover:-translate-y-1 transition-transform"></i>
+    </button>
+    
     <!-- 🔴 超宽屏灯箱 (保持不变) -->
     <div id="project-modal" class="fixed inset-0 z-[100] hidden flex justify-center items-center p-2 md:p-4 backdrop-blur-xl bg-black/90 transition-opacity duration-300 opacity-0 pointer-events-none">
         <div class="relative w-full max-w-[90vw] h-[95vh] bg-[#0f172a] rounded-2xl overflow-hidden shadow-2xl flex flex-col border border-white/10 transform scale-95 transition-transform duration-300" id="modal-content">
