--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>李林阳 Lilinyang | Portfolio 2026</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <link href="https://cdn.bootcdn.net/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/phosphor-icons/1.4.2/web/index.min.js"></script>
 
     <style>
         /* --- 1. 全局设置 --- */
@@ -275,7 +275,7 @@
         </div>
     </div>
 
-    <!-- 脚本区 --><script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- 脚本区 --><script src="https://cdn.bootcdn.net/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         // --- 0. 强制刷新回顶 (可选) ---
         if (history.scrollRestoration) { history.scrollRestoration = 'manual'; }
