--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
 </head>
-<body class="cn-mode selection:bg-emerald-500 selection:text-white">
+<body class="cn-mode selection:bg-emerald-500 selection:text-white no-scrollbar">
 
     <!-- 🌌 背景：更新为蓝绿极光色系 -->
     <canvas id="canvas-bg"></canvas>
@@ -257,7 +257,7 @@
         <i class="ph ph-arrow-up text-xl group-hover:-translate-y-1 transition-transform"></i>
     </button>
     
-    <!-- 🔴 超宽屏灯箱 (保持不变) -->
+    <!-- 🔴 项目详情弹窗-宽屏灯箱 -->
     <div id="project-modal" class="fixed inset-0 z-[100] hidden flex justify-center items-center p-2 md:p-4 backdrop-blur-xl bg-black/90 transition-opacity duration-300 opacity-0 pointer-events-none">
         <div class="relative w-full max-w-[90vw] h-[95vh] bg-[#0f172a] rounded-2xl overflow-hidden shadow-2xl flex flex-col border border-white/10 transform scale-95 transition-transform duration-300" id="modal-content">
             <div class="flex-none p-5 border-b border-white/10 bg-[#0f172a] z-20 flex justify-between items-center">
