--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            object-position: top; /* ✅ 关键修改：强制让图片从顶部开始显示 */
+            object-position: top; /* 关键修改：强制让图片从顶部开始显示 */
             transition: transform 0.6s ease;
         }
         .glass-card:hover .img-container img { transform: scale(1.08); }
@@ -133,7 +133,7 @@
         </div>
     </nav>
 
-    <!-- 🌟 新版 Hero 首屏 (复刻图片布局) -->
+    <!-- 🌟  Hero 首屏 -->
     <section class="h-screen w-full flex flex-col justify-between pt-24 pb-10 px-6 md:px-12 relative overflow-hidden">
         
         <!-- 中间：巨型 Portfolio 文字 -->
@@ -340,9 +340,9 @@
             reset() {
                 this.x = Math.random() * width;
                 this.y = Math.random() * height;
-                // 🚀 首页渐变-速度调快：从 0.2 提升到 0.9，方向更随机，这里也改成 1.0 (或者 1.2, 1.5 随你喜欢)
-                this.vx = (Math.random() - 0.5) * 0.9; 
-                this.vy = (Math.random() - 0.5) * 0.9;
+                // 🚀 首页渐变-速度调快：方向更随机，这里也改成 1.0 (或者 0.1, 1.2, 1.5 随你喜欢)
+                this.vx = (Math.random() - 0.5) * 1.5; 
+                this.vy = (Math.random() - 0.5) * 1.5;
                 this.baseSize = Math.random() * 300 + 300; // 基础大小
                 this.angle = Math.random() * Math.PI * 2; // 用于呼吸效果的相位
                 
@@ -353,7 +353,7 @@
             update() {
                 this.x += this.vx;
                 this.y += this.vy;
-                this.angle += 0.01; // 呼吸速度，如果你觉得**“呼吸”（忽大忽小）**的速度也太慢了，想让它呼吸得急促一点，可以同时把下面的 0.015 改大一点（比如 0.03）
+                this.angle += 0.03; // 呼吸速度，如果你觉得**“呼吸”（忽大忽小）**的速度也太慢了，想让它呼吸得急促一点，可以同时把下面的 0.015 改大一点（比如 0.03）
 
                 // 🌬️ 呼吸感核心：利用正弦波改变大小
                 this.size = this.baseSize + Math.sin(this.angle) * 30; 
