--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-    <script src="https://npm.elemecdn.com/@phosphor-icons/web"></script>
+    <script src="https://unpkg.zhimg.com/@phosphor-icons/web"></script>
 
     <style>
         /* --- 1. 全局设置 --- */
