--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>李林阳 Lilinyang | Portfolio 2026</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.bootcdn.net/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-    <script src="https://unpkg.zhimg.com/@phosphor-icons/web"></script>
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@phosphor-icons/web"></script>
 
     <style>
         /* --- 1. 全局设置 --- */
