--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </div>
     </div>
 
-    <!-- 脚本区 --><script src="https://cdn.bootcdn.net/ajax/libs/aos/2.3.4/aos.js"></script>
+    <!-- 脚本区 --><script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
         // --- 0. 强制刷新回顶 (可选) ---
         if (history.scrollRestoration) { history.scrollRestoration = 'manual'; }
