--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #475569;       /* 亮灰 (Slate-600) */
 }
+        </style>
+</head>
+<body class="cn-mode selection:bg-emerald-500 selection:text-white">
 
     <!-- 🌌 背景：更新为蓝绿极光色系 -->
     <canvas id="canvas-bg"></canvas>
