--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
     <footer id="contact" class="py-16 border-t border-white/5 bg-[#000509] relative z-20">
         <div class="container mx-auto px-6 text-center" data-aos="fade-up">
             <p class="text-3xl font-bold text-white mb-10"><span lang="cn">保持联系</span><span lang="en">Let's Connect</span></p>
+            
             <div class="flex flex-col md:flex-row justify-center gap-6 mb-10">
                 <a href="mailto:940213696@qq.com" class="group flex items-center justify-center gap-3 text-gray-300 hover:text-white transition bg-white/5 border border-white/10 hover:border-emerald-500/50 hover:bg-emerald-500/10 px-8 py-4 rounded-2xl">
                     <i class="ph ph-envelope-simple text-2xl text-emerald-400 group-hover:scale-110 transition-transform"></i> 
@@ -269,6 +270,17 @@
                     <span class="font-mono">+86 17707373986</span>
                 </a>
             </div>
+
+            <div class="flex justify-center gap-6 mb-10">
+                <a href="https://space.bilibili.com/36635391" target="_blank" class="group p-4 rounded-full bg-white/5 border border-white/10 hover:bg-[#FB7299] hover:border-[#FB7299] hover:scale-110 transition-all duration-300">
+                    <i class="ph ph-television-simple text-2xl text-gray-400 group-hover:text-white"></i>     /* 这里可以更新B站链接 */
+                </a>
+
+                <a href="https://www.youtube.com/@%E6%9D%B1%E7%84%A1%E9%87%8E" target="_blank" class="group p-4 rounded-full bg-white/5 border border-white/10 hover:bg-[#FF0000] hover:border-[#FF0000] hover:scale-110 transition-all duration-300">
+                    <i class="ph ph-youtube-logo text-2xl text-gray-400 group-hover:text-white"></i>     /* 这里可以更新油管链接 */
+                </a>
+            </div>
+
             <p class="text-gray-600 text-xs tracking-widest uppercase">© 2026 Lilinyang.</p>
         </div>
     </footer>
