--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@
 
             <div class="flex justify-center gap-6 mb-10">
                 <a href="https://space.bilibili.com/36635391" target="_blank" class="group p-4 rounded-full bg-white/5 border border-white/10 hover:bg-[#FB7299] hover:border-[#FB7299] hover:scale-110 transition-all duration-300">
-                    <i class="ph ph-television-simple text-2xl text-gray-400 group-hover:text-white"></i>     /* 这里可以更新B站链接 */
+                    <i class="ph ph-television-simple text-2xl text-gray-400 group-hover:text-white"></i>
                 </a>
 
                 <a href="https://www.youtube.com/@%E6%9D%B1%E7%84%A1%E9%87%8E" target="_blank" class="group p-4 rounded-full bg-white/5 border border-white/10 hover:bg-[#FF0000] hover:border-[#FF0000] hover:scale-110 transition-all duration-300">
-                    <i class="ph ph-youtube-logo text-2xl text-gray-400 group-hover:text-white"></i>     /* 这里可以更新油管链接 */
+                    <i class="ph ph-youtube-logo text-2xl text-gray-400 group-hover:text-white"></i>
                 </a>
             </div>
-
+            
             <p class="text-gray-600 text-xs tracking-widest uppercase">© 2026 Lilinyang.</p>
         </div>
     </footer>
