--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lilinyang Portfolio</title>
+
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 256 256%22><rect width=%22256%22 height=%22256%22 fill=%22none%22/><path d=%22M128,24a8,8,0,0,1,8,8V64a8,8,0,0,1-16,0V32A8,8,0,0,1,128,24Zm0,144a8,8,0,0,0-8,8v32a8,8,0,0,0,16,0V176A8,8,0,0,0,128,168ZM216,112H184a8,8,0,0,0,0,16h32a8,8,0,0,0,0-16ZM72,112H40a8,8,0,0,0,0,16H72a8,8,0,0,0,0-16Zm121.37,33.37a8,8,0,0,0-11.31,11.31l22.63,22.63a8,8,0,0,0,11.31-11.31ZM51.31,75.31A8,8,0,0,0,40,86.63L62.63,109.25a8,8,0,0,0,11.32-11.31Zm142-24a8,8,0,0,0-11.31-11.31L159.37,62.63a8,8,0,0,0,11.31,11.31ZM73.94,182.06a8,8,0,0,0-11.31,0L40,204.69a8,8,0,0,0,11.31,11.31l22.63-22.63A8,8,0,0,0,73.94,182.06Z%22 fill=%22%2334d399%22/></svg>">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
