--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                - 1.0：完全不透 (实心)
             */
             color: rgba(255, 255, 255, 0.75); 
+
             
-            /* 🟢 可选增强：混合模式 */
-            /* 加上这一行，能让文字和底下的极光背景融合得更自然 */
+            /* 🟢 可选增强：混合模式，加上这一行，能让文字和底下的极光背景融合得更自然 */
             mix-blend-mode: overlay; 
             
             position: relative; 
