--- a/index.html
+++ b/index.html
@@ -357,11 +357,18 @@
                     <h3 id="modal-title" class="text-xl md:text-2xl font-bold text-white">Project Title</h3>
                     <p id="modal-desc" class="text-blue-400 text-sm mt-1 font-mono">Description</p>
                 </div>
-                <button onclick="closeModal()" class="text-gray-400 hover:text-white hover:bg-white/10 rounded-full p-2 transition"><i class="ph ph-x text-2xl"></i></button>
+                <div class="flex items-center gap-2">
+                    <button onclick="zoomImage()" title="放大查看 (新标签页)" class="hidden md:block text-gray-400 hover:text-emerald-400 hover:bg-white/10 rounded-full p-2 transition">
+                        <i class="ph ph-magnifying-glass-plus text-2xl"></i>
+                    </button>
+                    <button onclick="closeModal()" title="关闭" class="text-gray-400 hover:text-white hover:bg-white/10 rounded-full p-2 transition">
+                        <i class="ph ph-x text-2xl"></i>
+                    </button>
+                </div>
             </div>
             <div class="flex-1 overflow-y-auto bg-[#000509] no-scrollbar relative text-center">
                 <img id="modal-img" src="" class="w-full h-auto block mx-auto cursor-zoom-in transition shadow-2xl" 
-                    alt="Project Detail" title="Click to view full size" onclick="window.open(this.src, '_blank');">
+                    alt="Project Detail" title="Project Detail Image">
                 <div class="py-16"><p class="text-gray-600 text-xs uppercase tracking-[0.2em]"><span lang="cn">展示结束</span><span lang="en">End of Presentation</span></p></div>
             </div>
         </div>
@@ -370,6 +377,16 @@
     <!-- 脚本区 --><script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
 
+        // 新增：打开模态框内的图片到新标签页，用于放大查看
+        window.zoomImage = function() {
+            // 获取当前模态框中图片的 src
+            const imgSrc = document.getElementById('modal-img').src;
+            if (imgSrc) {
+                // 在新窗口中打开图片
+                window.open(imgSrc, '_blank');
+            }
+        };
+        
         // 新增：图片加载成功后移除占位符类
         window.removePlaceholder = function(imgElement) {
             // 找到 img 的父容器 (div.img-container) 并移除占位符类
