--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
                 <div class="flex flex-col gap-1">
                     <p class="uppercase tracking-wider text-xs opacity-50">Telephone</p>
-                    <p class="font-mono text-emerald-300">+86 17707373986</p>
+                    <p class="font-mono text-emerald-300">+86 177******86</p>
                 </div>
                 <div class="flex flex-col gap-1">
                     <p class="uppercase tracking-wider text-xs opacity-50">Mail</p>
@@ -345,9 +345,9 @@
                     <i class="ph ph-envelope-simple text-2xl text-emerald-400 group-hover:scale-110 transition-transform"></i> 
                     <span class="font-mono">940213696@qq.com</span>
                 </a>
-                <a href="tel:+8617707373986" class="group flex items-center justify-center gap-3 text-gray-300 hover:text-white transition bg-white/5 border border-white/10 hover:border-cyan-500/50 hover:bg-cyan-500/10 px-8 py-4 rounded-2xl">
+                <a href="tel:+86177******86" class="group flex items-center justify-center gap-3 text-gray-300 hover:text-white transition bg-white/5 border border-white/10 hover:border-cyan-500/50 hover:bg-cyan-500/10 px-8 py-4 rounded-2xl">
                     <i class="ph ph-phone text-2xl text-cyan-400 group-hover:scale-110 transition-transform"></i> 
-                    <span class="font-mono">+86 17707373986</span>
+                    <span class="font-mono">+86 177******86</span>
                 </a>
             </div>
 
