--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     <i class="ph ph-television-simple text-2xl text-gray-400 group-hover:text-white"></i>
                 </a>
 
-                <a href="https://www.youtube.com/@%E6%9D%B1%E7%84%A1%E9%87%8E" target="_blank" class="group p-4 rounded-full bg-white/5 border border-white/10 hover:bg-[#FF0000] hover:border-[#FF0000] hover:scale-110 transition-all duration-300">
+                <a href="https://www.youtube.com/@%E6%B5%B7%E7%BE%8A%E7%B2%A5" target="_blank" class="group p-4 rounded-full bg-white/5 border border-white/10 hover:bg-[#FF0000] hover:border-[#FF0000] hover:scale-110 transition-all duration-300">
                     <i class="ph ph-youtube-logo text-2xl text-gray-400 group-hover:text-white"></i>
                 </a>
             </div>
